--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,13 +67,8 @@
 
 
 /*** Navbar ***/
-.navbar .dropdown-toggle::after {
-    border: none;
-    content: "\f107";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    vertical-align: middle;
-    margin-left: 8px;
+.navbar .navbar-brand {
+    font-size: 35px;
 }
 
 .navbar .navbar-nav .nav-link {
@@ -103,25 +98,6 @@
     .navbar .navbar-nav {
         margin-top: 8px;
         border-top: 1px solid rgba(256, 256, 256, .1)
-    }
-}
-
-@media (min-width: 992px) {
-    .navbar .nav-item .dropdown-menu {
-        display: block;
-        visibility: hidden;
-        top: 100%;
-        transform: rotateX(-75deg);
-        transform-origin: 0% 0%;
-        transition: .5s;
-        opacity: 0;
-    }
-
-    .navbar .nav-item:hover .dropdown-menu {
-        transform: rotateX(0deg);
-        visibility: visible;
-        transition: .5s;
-        opacity: 1;
     }
 }
 
@@ -156,7 +132,7 @@
         position: relative;
         min-height: 500px;
     }
-    
+
     #header-carousel .carousel-item img {
         position: absolute;
         width: 100%;
