--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,11 +67,11 @@
 
 
 /*** Navbar ***/
-.navbar .navbar-brand {
+.bg-primary .bg-primary-brand {
     font-size: 35px;
 }
 
-.navbar .navbar-nav .nav-link {
+.bg-primary .bg-primary-nav .nav-link {
     margin-right: 30px;
     padding: 20px 0;
     color: #FFFFFF;
@@ -79,23 +79,23 @@
     outline: none;
 }
 
-.navbar .navbar-nav .nav-link:hover,
-.navbar .navbar-nav .nav-link.active {
+.bg-primary .bg-primary-nav .nav-link:hover,
+.bg-primary .bg-primary-nav .nav-link.active {
     color: var(--dark);
 }
 
-.navbar.sticky-top {
+/* .bg-primary.sticky-top {
     top: -100px;
     transition: .5s;
-}
+  } */
 
 @media (max-width: 991.98px) {
-    .navbar .navbar-nav .nav-link {
+    .bg-primary .bg-primary-nav .nav-link {
         margin-right: 0;
         padding: 8px 0;
     }
 
-    .navbar .navbar-nav {
+    .bg-primary .bg-primary-nav {
         margin-top: 8px;
         border-top: 1px solid rgba(256, 256, 256, .1)
     }
