--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,7 +74,7 @@
 .bg-primary .bg-primary-nav .nav-link {
     margin-right: 30px;
     padding: 20px 0;
-    color: #FFFFFF;
+    color: #000000;
     font-weight: 500;
     outline: none;
 }
@@ -138,6 +138,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        left: 0;
     }
 }
 
